# ChangeLog for net-im/pork
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/pork/ChangeLog,v 1.34 2005/10/16 04:45:56 kumba Exp $

  16 Oct 2005; Joshua Kinard <kumba@gentoo.org> pork-0.99.8.1.ebuild:
  Added ~mips to KEYWORDS.

  15 Sep 2005; Aron Griffis <agriffis@gentoo.org> pork-0.99.8.1.ebuild:
  Mark 0.99.8.1 stable on alpha

  01 Aug 2005; Jonathan Smith <smithj@gentoo.org> pork-0.99.8.1.ebuild:
  cleaned up ebuild

  18 Jul 2005; Jonathan Smith <smithj@gentoo.org> pork-0.99.8.1.ebuild:
  added ~ppc-macos

  09 Jul 2005; Joseph Jezak <josejx@gentoo.org> pork-0.99.8.1.ebuild:
  Marked ppc stable.

  09 Jul 2005; Jonathan Smith <smithj@gentoo.org> metadata.xml,
  pork-0.99.8.1.ebuild:
  stable sparc

  26 Jun 2005; Jonathan Smith <smithj@gentoo.org> pork-0.99.8.1.ebuild:
  stable amd64

  14 Jun 2005; Jonathan Smith <smithj@gentoo.org> pork-0.99.8.1.ebuild:
  0.99.8.1 stable on x86

  13 Jun 2005; Jonathan Smith <smithj@gentoo.org> metadata.xml,
  -pork-0.99.1.ebuild, -pork-0.99.5.ebuild:
  cleaned up old ebuilds and added self as maintainer (with approval from net-im)

*pork-0.99.8.1 (05 May 2005)

  05 May 2005; Don Seiler <rizzo@gentoo.org> +pork-0.99.8.1.ebuild:
  Version bump, closes bug 91505

  05 May 2005; Don Seiler <rizzo@gentoo.org> pork-0.99.7.ebuild:
  Stable on x86, addressing bug 76173

*pork-0.99.7 (03 Jan 2005)

  03 Jan 2005; Don Seiler <rizzo@gentoo.org> +pork-0.99.7.ebuild:
  Version bump.  Closes bug #75751, thanks to Jonathan Smith

*pork-0.99.5 (27 Sep 2004)

  27 Sep 2004; Don Seiler <rizzo@gentoo.org> +pork-0.99.5.ebuild:
  Version bump

  30 Aug 2004; Tom Martin <slarti@gentoo.org> pork-0.99.4.ebuild:
  Marked ~amd64.

*pork-0.99.4 (05 Aug 2004)

  05 Aug 2004; Don Seiler <rizzo@gentoo.org> +pork-0.99.4.ebuild:
  Version bump

  21 Jul 2004; David Holm <dholm@gentoo.org> pork-0.99.3.ebuild:
  Added to ~ppc.

*pork-0.99.3 (19 Jul 2004)
