@@ -1,6 +1,6 @@
-MD5 9cd7db2ad0bc6789dcfeea6e41dcf1a2 ChangeLog 4251
+MD5 c553b6f1c5f54735beeabf041bfb91ce ChangeLog 4347
 MD5 47d5b5f21b2d264a13cd4b4198a45391 files/digest-pork-0.99.7 63
 MD5 6c14a8f6820250a5ce7a79dc84c5e102 files/digest-pork-0.99.8.1 65
 MD5 01d933d85d8f282b16e5390ecf2380be metadata.xml 321
 MD5 b3fa6e0066ac61156a89da8ac6f2f51a pork-0.99.7.ebuild 988
-MD5 c20e4fc95eb86539e0c040cf30e93335 pork-0.99.8.1.ebuild 949
+MD5 ba16ad3b6e255fbf28de46b8ae3bbc7e pork-0.99.8.1.ebuild 948
