@@ -1,6 +1,9 @@
 # ChangeLog for net-im/pork
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/pork/ChangeLog,v 1.34 2005/10/16 04:45:56 kumba Exp $
+# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-im/pork/ChangeLog,v 1.35 2006/02/10 14:20:18 kumba Exp $
+
+  10 Feb 2006; Joshua Kinard <kumba@gentoo.org> pork-0.99.8.1.ebuild:
+  Marked stable on mips.
 
   16 Oct 2005; Joshua Kinard <kumba@gentoo.org> pork-0.99.8.1.ebuild:
   Added ~mips to KEYWORDS.
